Use 2 'themes' directories: one containing only the views and another containing the assets (placed in the application's root) for the theme

--- a/themes/caminar/assets/css/main.css
+++ b/themes/caminar/assets/css/main.css
@@ -3070,7 +3070,7 @@
 		-ms-transition: opacity 1.5s ease-in-out, visibility 1.5s;
 		transition: opacity 1.5s ease-in-out, visibility 1.5s;
 		content: '';
-		background-image: url(../../images/bg.jpg);
+		background-image: url(../images/bg.jpg);
 		background-attachment: fixed;
 		background-position: center;
 		background-repeat: no-repeat;
