--- a/application/views/themes/caminar/templates/posts.twig
+++ b/application/views/themes/caminar/templates/posts.twig
@@ -1,53 +1,33 @@
-<!-- One -->
-<!--
-<section id="one" class="wrapper style1">
-
-	<div class="image fit flush">
-		<a href="{{post.slug}}">
-			<img src="./assets/img/posts/{{post.post_image}}" alt="{{post.title}}" />
-		</a>
-	</div>
-	<header class="special">
-		<h2>{{post.title}}</h2>
-		<p>{{post.description}}</p>
-	</header>
-	<div class="content">{{post.content}}</div>
-</section>
--->
-
-{% for post in posts %}
-	<section id="one" class="wrapper style1">
-
-		<div class="image fit flush">
-			<a href="{{post.slug}}">
-				<img src="/assets/img/posts/{{post.post_image}}" alt="{{post.title}}" />
-			</a>
-		</div>
-		<header class="special">
-			<h2>{{post.title}}</h2>
-			<p>{{post.description}}</p>
-		</header>
-		<div class="content">{{post.content|raw}}</div>
-	</section>
-{% endfor %}
-
-<!-- Three -->
-<!--
-<section id="three" class="wrapper">
-	<div class="spotlight">
-		<div class="image flush">
-			<a href="{{post.slug}}">
-				<img src="./assets/img/posts/{{post.post_image}}" alt="{{post.title}}" />
-			</a>
-		</div>
-		<div class="inner">
-			<h3>{{post.title}}</h3>
-			<p>{{post.description}}</p>
-			<div>
-				<a href="{{post.slug}}" class="button special small">Read More</a>
+<section class="wrapper style1">
+	{% for post in posts %}
+		{% if loop.first %}
+			<div class="image fit flush">
+				<a href="{{post.slug}}">
+					<img src="/assets/img/posts/{{post.post_image}}" alt="{{post.title}}" />
+				</a>
 			</div>
-		</div>
-	</div>
+			<header class="special">
+				<h2>{{post.title}}</h2>
+				<p>{{post.description}}</p>
+			</header>
+			<div class="content">{{post.content|raw}}</div>
+		{% else %}
+			<div class="spotlight {% if (loop.index is even) %}alt{% else %}{% endif %}">
+				<div class="image flush">
+					<a href="{{post.slug}}">
+						<img src="./assets/img/posts/{{post.post_image}}" alt="{{post.title}}" />
+					</a>
+				</div>
+				<div class="inner">
+					<h3>{{post.title}}</h3>
+					<p>{{post.description}}</p>
+					<div class="{% if (loop.index is even) %}text-right{% else %}text-left{% endif %}">
+						<a href="{{post.slug}}" class="button special small">Read More</a>
+					</div>
+				</div>
+			</div>
+		{% endif %}
+	{% endfor %}
 </section>
--->
+
 <div class="pagination-container"></div>
