--- a/application/views/themes/caminar/templates/page.twig
+++ b/application/views/themes/caminar/templates/page.twig
@@ -1,6 +1,8 @@
 <div class="wrapper style1">
 	<div class="content">
 		<h2>{{page.title}}</h2>
-		<div class="post-content"></div>
+		<div class="post-content">
+			{{page.content | raw}}
+		</div>
 	</div>
 </div>
