Add alignment classes

--- a/themes/caminar/assets/css/main.css
+++ b/themes/caminar/assets/css/main.css
@@ -105,6 +105,20 @@
    overflow: hidden;
 }
 
+	/* Alignment classes */
+
+	.text-left {
+		text-align: left;
+	}
+
+	.text-right {
+		text-align: right;
+	}
+
+	.text-center {
+		text-align: center;
+	}
+
 	/* Containers */
 
 	.container {
