display posts by author and search results

--- a/application/views/themes/caminar/templates/posts.twig
+++ b/application/views/themes/caminar/templates/posts.twig
@@ -15,7 +15,7 @@
 			<div class="spotlight {% if (loop.index is even) %}alt{% else %}{% endif %}">
 				<div class="image flush">
 					<a href="{{post.slug}}">
-						<img src="./assets/img/posts/{{post.post_image}}" alt="{{post.title}}" />
+						<img src="/assets/img/posts/{{post.post_image}}" alt="{{post.title}}" />
 					</a>
 				</div>
 				<div class="inner">
