Add pagination to the posts

--- a/application/views/themes/caminar/templates/posts.twig
+++ b/application/views/themes/caminar/templates/posts.twig
@@ -30,7 +30,7 @@
 	{% endfor %}
 </section>
 
-<div class="pagination-container"></div>
+<div class="pagination-container">{{ pagination|raw }}</div>
 
 
 
