Use the site_title vatiable

--- a/application/views/themes/caminar/layout.twig
+++ b/application/views/themes/caminar/layout.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{{siteTitle}} | {{tagline}}</title>
+		<title>{{site_title}} | {{tagline}}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{{maincss}}">
@@ -10,7 +10,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<div class="logo"><a href="/">{{siteTitle}}</a></div>
+			<div class="logo"><a href="/">{{site_title}}</a></div>
 		</header>
 
 		<section id="main">
@@ -49,7 +49,7 @@
 				{% endif %}
 			</div>
 			<div class="copyright">
-				&copy; {{companyName}}. All rights reserved. Design by <a href="https://templated.co" target="_blank">TEMPLATED</a>
+				&copy; {{company_name}}. All rights reserved. Design by <a href="https://templated.co" target="_blank">TEMPLATED</a>
 			</div>
 		</footer>
 
