Animation css not nedded anymore

--- a/themes/caminar/assets/css/main.css
+++ b/themes/caminar/assets/css/main.css
@@ -7,94 +7,59 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 	*/
 
-	/* Reset */
+/* Reset */
 
-	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-		margin: 0;
-		padding: 0;
-		border: 0;
-		font-size: 100%;
-		font: inherit;
-		vertical-align: baseline;
-	}
-
-	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-		display: block;
-	}
-
-	body {
-		line-height: 1;
-	}
-
-	ol, ul {
-		list-style: none;
-	}
-
-	blockquote, q {
-		quotes: none;
-	}
-
-	blockquote:before, blockquote:after, q:before, q:after {
-		content: '';
-		content: none;
-	}
-
-	table {
-		border-collapse: collapse;
-		border-spacing: 0;
-	}
-
-	body {
-		-webkit-text-size-adjust: none;
-	}
-
-	/* Box Model */
-
-	*, *:before, *:after {
-		-moz-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		box-sizing: border-box;
-	}
-
-	.clearfix:after {
-		content: "";
-		display: table;
-		clear: both;
-	}
-
-	/* Animations */
-
-	@-webkit-keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  99% {
-    opacity: 1;
-    height: auto;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-  100% {
-    opacity: 0;
-    height: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  99% {
-    opacity: 0.01;
-  }
-  100% {
-    opacity: 0;
-    height: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+body {
+	line-height: 1;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+blockquote, q {
+	quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+body {
+	-webkit-text-size-adjust: none;
+}
+
+/* Box Model */
+
+*, *:before, *:after {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.clearfix:after {
+	content: "";
+	display: table;
+	clear: both;
 }
 
 .fadeout {
@@ -105,48 +70,48 @@
    overflow: hidden;
 }
 
-	/* Alignment classes */
+/* Alignment classes */
 
-	.text-left {
-		text-align: left;
-	}
+.text-left {
+	text-align: left;
+}
 
-	.text-right {
-		text-align: right;
-	}
+.text-right {
+	text-align: right;
+}
 
-	.text-center {
-		text-align: center;
-	}
+.text-center {
+	text-align: center;
+}
 
-	/* Containers */
+/* Containers */
 
-	.container {
-		margin-left: auto;
-		margin-right: auto;
-	}
+.container {
+	margin-left: auto;
+	margin-right: auto;
+}
 
-	.container.\31 25\25 {
-		width: 100%;
-		max-width: 100rem;
-		min-width: 80rem;
-	}
+.container.\31 25\25 {
+	width: 100%;
+	max-width: 100rem;
+	min-width: 80rem;
+}
 
-	.container.\37 5\25 {
-		width: 60rem;
-	}
+.container.\37 5\25 {
+	width: 60rem;
+}
 
-	.container.\35 0\25 {
-		width: 40rem;
-	}
+.container.\35 0\25 {
+	width: 40rem;
+}
 
-	.container.\32 5\25 {
-		width: 20rem;
-	}
+.container.\32 5\25 {
+	width: 20rem;
+}
 
-	.container {
-		width: 80rem;
-	}
+.container {
+	width: 80rem;
+}
 
 	@media screen and (max-width: 1680px) {
 
@@ -2197,30 +2162,6 @@
 		border-color: #54a354
 	}
 
-	/* Form */
-
-	form {
-		margin: 0 0 1.5rem 0;
-	}
-
-	.form-controll {
-		position: relative;
-	}
-
-	.form-controll .error {
-		position: absolute;
-		bottom: 2px;
-		right: 5px;
-		font-size: 0.75rem;
-		color: #c00;
-	}
-
-	.ng-invalid.ng-touched,
-	.ng-submitted .ng-invalid {
-		box-shadow: none;
-		border: 2px solid #c00;
-	}
-
 	.text-success {
 		color: #54a354;
 	}
@@ -2238,6 +2179,10 @@
 		border-radius: .25rem;
 	}
 
+	.alert-hidden {
+		display: none;
+	}
+
 	.alert-success {
 		background-color: #5eb661;
 		border: 1px solid #4b8358;
@@ -2251,7 +2196,7 @@
 	label {
 		display: block;
 		font-size: 0.9rem;
-		font-weight: 700;
+		font-weight: 500;
 		margin: 0 0 1rem 0;
 	}
 
@@ -2470,6 +2415,32 @@
 	.formerize-placeholder {
 		color: #bbb !important;
 	}
+
+
+		/* comment form */
+
+		#commentForm {
+			margin: 0 0 1.5rem 0;
+		}
+	
+		#commentForm .form-controll {
+			position: relative;
+		}
+	
+		input[type="text"].error,
+		input[type="email"].error,
+		textarea.error {
+			border-color: #c00;
+			box-shadow: none;
+		}
+	
+		.form-controll label.error {
+			position: absolute;
+			bottom: 2px;
+			right: 5px;
+			font-size: 0.75rem;
+			color: #c00;
+		}
 
 	/* Gallery */
 
