Move the functionality of adding post comments to the frontend (theme)

--- a/application/views/themes/caminar/layout.twig
+++ b/application/views/themes/caminar/layout.twig
@@ -49,5 +49,9 @@
 				&copy; {{company_name}}. All rights reserved. Design by <a href="https://templated.co" target="_blank">TEMPLATED</a>
 			</div>
 		</footer>
+
+		<script src="{{base_url}}/themes/caminar/assets/js/jquery.min.js"></script>
+		<script src="{{base_url}}/themes/caminar/assets/js/jquery.validate.min.js"></script>
+		<script src="{{base_url}}/themes/caminar/assets/js/main.js"></script>
 	</body>
 </html>
