--- a/application/views/themes/caminar/templates/singlepost.twig
+++ b/application/views/themes/caminar/templates/singlepost.twig
@@ -16,42 +16,7 @@
 			{{post.content | raw}}
 		</div>
 
-		<div class="comments-form">
-			<h3>Leave a comment</h3>
-			<form name="commentForm" novalidate>
-				<div class="row uniform">
-					<div class="form-controll 6u 12u$(xsmall)">
-						<input type="text" name="name" id="name" placeholder="Name" />
-					</div>
-
-					<div class="form-controll 6u$ 12u$(xsmall)">
-						<input type="email" name="email" id="email" placeholder="Email" />
-					</div>
-
-					<div class="form-controll 12u$">
-						<textarea name="comment" rows="6" id="message"></textarea>
-					</div>
-
-					<!-- Break -->
-					<div class="12u$">
-						<input type="submit" value="Add comment" class="button special fit" />
-					</div>
-				</div>
-			</form>
-		</div>
-
-		<div class="comments">
-			<h3>Comments</h3>
-			{% if comments %}
-				{% for comment in comments %}
-				<div class="comment">
-					<h4>On {{comment.created_at  | date("M d, Y")}}, {{comment.name}} wrote:</h4>
-					<p>{{comment.comment}}</p>
-				</div>
-				{% endfor %}
-				{% else %}
-					<p>There are no comments yet</p>
-				{% endif %}
-		</div>
+		{{ include('themes/caminar/templates/comments.twig') }}
+		
 	</div>
 </div>
