Small visual fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,10 @@ table a {
   display: inline-block; 
 }
 
+.card-list-group {
+  overflow: hidden;
+}
+
 .card-list-group .list-group-item {
   border-radius: 0;
   border-right: none;
