Use dynamic theme name

--- a/application/views/themes/caminar/layout.twig
+++ b/application/views/themes/caminar/layout.twig
@@ -4,7 +4,7 @@
 		<title>{{site_title}} | {{tagline}}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="{{maincss}}">
+		<link rel="stylesheet" href="{{base_url}}themes/{{theme_directory}}/assets/css/main.css">
 	</head>
 	<body>
 
@@ -50,8 +50,8 @@
 			</div>
 		</footer>
 
-		<script src="{{base_url}}/themes/caminar/assets/js/jquery.min.js"></script>
-		<script src="{{base_url}}/themes/caminar/assets/js/jquery.validate.min.js"></script>
-		<script src="{{base_url}}/themes/caminar/assets/js/main.js"></script>
+		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/jquery.min.js"></script>
+		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/jquery.validate.min.js"></script>
+		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/main.js"></script>
 	</body>
 </html>
