--- a/application/views/themes/caminar/layout.twig
+++ b/application/views/themes/caminar/layout.twig
@@ -38,7 +38,7 @@
 				</ul>
 
 				{% if pages %}
-					<ul class="icons">
+					<ul class="footer-links">
 						{% for page in pages %}
 							<li><a href="{{base_url}}/pages/page/{{page.id}}">{{page.title}}</a></li>
 						{% endfor %}
