--- a/application/views/themes/clean-blog/layout.twig
+++ b/application/views/themes/clean-blog/layout.twig
@@ -24,12 +24,21 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand" href="{{base_url}}">Start Bootstrap</a>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{{base_url}}">{{site_title}}</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
+      <form method="get" action="{{base_url}}posts/search" id="search_form" class="w-100 pt-2 pb-1" accept-charset="utf-8">
+				<div id="group-search" class="input-group <?php if(form_error('search')) echo 'has-error';?>">
+					<input class="form-control" type="text" name="search" placeholder="Search posts..." aria-label="Search">
+					<?php if(form_error('search')) echo form_error('search'); ?> 
+					<div class="input-group-append">
+						<button class="btn btn-sm btn-light" type="submit"><i class="fa fa-search"></i></button>
+					</div>
+				</div>
+			</form>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
