--- a/application/views/themes/clean-blog/templates/posts.twig
+++ b/application/views/themes/clean-blog/templates/posts.twig
@@ -2,6 +2,17 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
+				{% if posts_count is defined %}
+					<p class="mt-0 text-muted {{ posts_count == 0 ? 'text-center' : '' }}">
+						{% if posts_count > 0 %}		
+							We found {{posts_count}} {{ posts_count == 1 ? "post" : "posts" }} containing <span class="quote-inline">{{expression}}</span>:
+						{% else %}
+							<span class="d-block">No posts containing <span class="quote-inline">{{expression}}</span> ware found.</span>
+							<span class="d-block">See the most <a href="{{base_url}}">recent posts</a>.</span>
+						{% endif %}
+					</p>
+				{% endif %}
+
 				{% if posts %}
 					{% for post in posts %}
 						<div class="post-preview">
@@ -9,10 +20,14 @@
 								<h2 class="post-title">{{post.title}}</h2>
 								<h3 class="post-subtitle">{{post.description}}</h3>
 							</a>
-							<p class="post-meta">Posted in <a href="categories/posts/{{post.cat_id}}" title="All posts in {{post.post_category}}">{{post.post_category}}</a>, on {{post.created_at | date("M d, Y")}}</p>
+							<p class="post-meta">
+								Posted {% if category_name is null %}in <a href="{{base_url}}categories/posts/{{post.cat_id}}" title="All posts in {{post.post_category}}">{{post.post_category}}</a>,{% endif %} on {{post.created_at | date("M d, Y")}}
+							</p>
 						</div>
 						{% if not loop.last %}<hr>{% endif %}
 					{% endfor %}
+				{% else %}
+					<p class="mt-0 text-muted text-center">There are no posts {% if category_name is defined %} in this category {% endif %} yet.</p>
 				{% endif %}
         <!-- Pager -->
         <div class="clearfix">{{ pagination|raw }}</div>
