--- a/application/views/themes/clean-blog/layout.twig
+++ b/application/views/themes/clean-blog/layout.twig
@@ -31,9 +31,9 @@
         <i class="fas fa-bars"></i>
       </button>
       <form method="get" action="{{base_url}}posts/search" id="search_form" class="w-100 pt-2 pb-1 pr-lg-3" accept-charset="utf-8">
-				<div id="group-search" class="input-group <?php if(form_error('search')) echo 'has-error';?>">
+				<div id="group-search" class="input-group">
 					<input class="form-control" type="text" name="search" placeholder="Search posts..." aria-label="Search">
-					<?php if(form_error('search')) echo form_error('search'); ?> 
+          {% if search_errors %}{{search_errors | raw}}{% endif %}
 					<div class="input-group-append">
 						<button class="btn btn-sm btn-light" type="submit"><i class="fa fa-search"></i></button>
 					</div>
