Fix bug: 2 shlashes in page links

--- a/application/views/themes/clean-blog/layout.twig
+++ b/application/views/themes/clean-blog/layout.twig
@@ -57,7 +57,7 @@
           {% if pages %}
             {% for page in pages %}
               <li class="nav-item">
-                <a class="nav-link" href="{{base_url}}/pages/page/{{page.id}}">{{page.title}}</a>
+                <a class="nav-link" href="{{base_url}}pages/page/{{page.id}}">{{page.title}}</a>
               </li>
             {% endfor %}
 				  {% endif %}
