Move the Dashboard dropdown

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,7 @@ table a {
   border-radius: 0;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.11);
   top: 45px;
+  left: 5px;
   background: #fafafa;
 }
 
