--- a/application/views/themes/caminar/layout.twig
+++ b/application/views/themes/caminar/layout.twig
@@ -5,6 +5,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{{base_url}}themes/{{theme_directory}}/assets/css/main.css">
+		{% if is_cookieconsent == true %}
+			<link rel="stylesheet" href="{{base_url}}/assets/css/cookies.css">
+			<script src="{{base_url}}assets/lib/cookieconsent/js/cookieconsent.min.js "></script>
+		{% endif %}
 	</head>
 	<body>
 
@@ -53,5 +57,35 @@
 		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/jquery.min.js"></script>
 		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/jquery.validate.min.js"></script>
 		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/main.js"></script>
+		{% if is_cookieconsent == true %} 
+    <script>
+        window.cookieconsent.initialise({
+        container: document.getElementById("cookieconsent"),
+        palette:{
+        popup: {background: "#0068BB"},
+        button: {background: "#fff"},
+        },
+        revokable: true,
+        onStatusChange: function(status) {
+        console.log(this.hasConsented() ?
+          'enable cookies' : 'disable cookies');
+        },
+        "position": "bottom-left",
+        "theme": "classic",
+        "secure": true,
+        "content": {
+          "header": 'Cookies used on the website!',
+          "message": 'This website uses cookies to improve your experience.',
+          "dismiss": 'Got it!',
+          "allow": 'Allow cookies',
+          "deny": 'Decline',
+          "link": 'Learn more',
+          "close": '&#x274c;',
+          "policy": 'Cookie Policy',
+          "target": '_blank',
+          }
+      });
+    </script>
+  {% endif %}
 	</body>
 </html>
