Remove blue background from active link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,10 @@ table a {
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
+.navbar-dark .navbar-nav .dropdown-menu a:active {
+  background-color: transparent;
+}
+
 .navbar-dark .navbar-nav .dropdown-menu a:last-child {
   border-bottom: none;
 }
@@ -284,10 +288,6 @@ table a {
 #terms {
   position: relative;
   top: 1px;
-}
-
-form a:not(.btn, .icon), {
-  color: #218838 !important;
 }
 
 .form-group {
