Move comments script outside the Caminar theme. Make it available for any theme.

--- a/application/views/themes/caminar/layout.twig
+++ b/application/views/themes/caminar/layout.twig
@@ -56,7 +56,7 @@
 
 		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/jquery.min.js"></script>
 		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/jquery.validate.min.js"></script>
-		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/main.js"></script>
+		<script src="{{base_url}}assets/lib/cookieconsent/js/comments.js"></script>
 		{% if is_cookieconsent == true %} 
     <script>
         window.cookieconsent.initialise({
